--- a/myBib.bib
+++ b/myBib.bib
@@ -401,7 +401,40 @@
 @book{Schmitt2013,
   title     = "From Taxonomy to Phylogenetics - Life and Work of Willi Hennig",
   author    = "Schmitt, M.",
-  year      = 1988,
+  year      = 2013,
   publisher = "Brill",
   address   = "Leiden; Boston"
+}
+
+@article{Mattox2011,
+  url = {https://doi.org/10.7594/revbio.07.09},
+  year = {2011},
+  publisher = {Universidade de Sao Paulo,  Agencia {USP} de Gestao da Informacao Academica ({AGUIA})},
+  volume = {7},
+  pages = {49--55},
+  author = {George M. T. Mattox},
+  title = {Gareth Nelson: os desafios atuais e o futuro da biogeografia.},
+  journal = {Revista da Biologia}
+}
+
+@article{Nelson1974,
+  url = {https://doi.org/10.1093/sysbio/23.3.452},
+  year = {1974},
+  volume = {23},
+  number = {3},
+  pages = {452--458},
+  author = {G. Nelson},
+  title = {Darwin-Henning Classification: A Reply to Ernst Mayr},
+  journal = {Systematic Biology}
+}
+
+@article{Eldredge2010,
+  url = {https://doi.org/10.1007/s12052-010-0284-3},
+  year = {2010},
+  volume = {3},
+  number = {4},
+  pages = {491--494},
+  author = {Niles Eldredge},
+  title = {How Systematics Became {\textquotedblleft}Phylogenetic{\textquotedblright}},
+  journal = {Evolution: Education and Outreach}
 }
