--- a/Introducao_a_filoinformatica.Rmd
+++ b/Introducao_a_filoinformatica.Rmd
@@ -223,7 +223,7 @@ Londres, década de 30. *The Theoretical Biology Club* --- esse era o nome que J
 ::: {}
 
 - Americano
-- Foi aluno de **`r tippy('Bertrand Russell', tooltip = '<a style="color: blue;">Bertrand Russell (1872–1970)</a><br><img src="./images/Russell.png" width="300">')`**.
+- Foi aluno de **`r tippy('Bertrand Russell', tooltip = '<a style="color: blue;">Bertrand Russell (1872–1970)</a><br><img src="./images/Russell.jpg" width="300">')`**.
 - Em 1948, Wiener publicou o livro `Cibernética: ou Controle e Comunicação no Animal e na Máquina`:
 
   ![](https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Capa_cibernetica.jpg/220px-Capa_cibernetica.jpg)
@@ -366,23 +366,23 @@ Fotografia de Gareth Nelson (à dir.) junto a Lars Brundin (à esq.), tirada por
     
     - O evento foi financiado por pelo *Systematic Biology Program* da *Division of Biological and Medical Sciences* da agência governamental americana *National Science Foundation*. O encontro resultou na publicação do relatório: *Trends, Priorities, and Needs in Systematics and Evolutionary Biology* `r Cite(referencias, "TrendsandPriorities")`.
   
-- Na década de 80, grandes avanços ocorrem na Sistemática Filogenética, com a publicação de importantes livros teórico-didáticos e o surgimento dos primeiros programas de computadores para realização de análises filogenéticas (ver item \ref{softwares_filogenia}).
+- Na década de 80, grandes avanços ocorrem na Sistemática Filogenética, com a publicação de importantes livros teórico-didáticos e o surgimento dos primeiros programas de computadores para realização de análises filogenéticas (ver item \@ref{softwares_filogenia}).
 
-![](books.png)
+![](images/books.png)
 
 - A partir do início dos anos 90, sistematas começaram a se envolver cada vez mais na conservação e no papel desempenhado pela sistemática na solução de problemas da sociedade. O senso de urgência e um apelo à comunidade sistemática de biologia para definir claramente suas prioridades e agenda de pesquisa levaram a uma reunião de aproximadamente uma dúzia de pesquisadores, representando a *American Society of Plant Taxonomists*, a *Society of Systematic Biologists* e a *Willi Hennig Society* do *American Museum of Natural History*, em março de 1991. No início da reunião, reconheceu-se a necessidade de uma iniciativa abrangente para integrar os esforços em prol de objetivos comuns `r Cite(referencias, c("Cracraft", "Eshbaugh"))`.
 
-O marco teórico da filoinformática, isto é, o momento no qual os pressupostos gerais e conceitos específicos desse campo do conhecimento começaram a ser desenvolvidos, tem sido demarcado pela publicação da [*Systematics Agenda 2000*](https://archive.org/details/systematicsagend00syst), em 1994 `r Cite(referencias, "Cracraft")`.
+- O marco teórico da filoinformática, isto é, o momento no qual os pressupostos gerais e conceitos específicos desse campo do conhecimento começaram a ser desenvolvidos, tem sido demarcado pela publicação da [*Systematics Agenda 2000*](https://archive.org/details/systematicsagend00syst), em 1994 `r Cite(referencias, "Cracraft")`.
 
 ![](images/SystAgenda2000.jpg) *Systematics Agenda 2000: Charting the Biosphere*. Publicada em 1994.
 
-- Três missões:
+  - Três missões:
 
-1. Descobrir, descrever e inventariar a diversidade global de espécies.
+    1. Descobrir, descrever e inventariar a diversidade global de espécies.
 
-2. Analisar e sintetizar informações em um sistema de classificação preditivo que reflita a história da vida.
+    2. Analisar e sintetizar informações em um sistema de classificação preditivo que reflita a história da vida.
 
-3. Organizar informações em uma forma eficientemente recuperável de modo que atenda às necessidades da ciência e da sociedade.
+    3. Organizar informações em uma forma eficientemente recuperável de modo que atenda às necessidades da ciência e da sociedade.
 
 
 ## Bioinformática > Filoinformática
@@ -3618,7 +3618,7 @@ xx <- phylo.to.map(tree, cbind(lat, long), plot = FALSE)
 plot(xx, type = "phylogram", asp = 1.3, mar = c(0.1, 0.5, 3.1, 0.1))
 ```
 
-Veja um exemplo pronto com dados reais (Fig. \ref{fig:Phylo.to.map}):
+Veja um exemplo pronto com dados reais (Fig. \@ref{fig:Phylo.to.map}):
 
 \begin{figure}[h]
 	\includegraphics[width=\linewidth]{Phylo.to.map.jpg}
