--- a/myBib.bib
+++ b/myBib.bib
@@ -438,3 +438,59 @@
   title = {How Systematics Became {\textquotedblleft}Phylogenetic{\textquotedblright}},
   journal = {Evolution: Education and Outreach}
 }
+
+@article{Felsenstein1981,
+  url = {https://doi.org/10.1007/bf01734359},
+  year = {1981},
+  volume = {17},
+  number = {6},
+  pages = {368--376},
+  author = {Joseph Felsenstein},
+  title = {Evolutionary trees from {DNA} sequences: A maximum likelihood approach},
+  journal = {Journal of Molecular Evolution}
+}
+
+@article{Holland2013,
+  url = {https://doi.org/10.1111/anzs.12035},
+  year = {2013},
+  volume = {55},
+  number = {3},
+  pages = {205--220},
+  author = {Barbara R. Holland},
+  title = {The Rise of Statistical Phylogenetics},
+  journal = {Australian {\&}amp$\mathsemicolon$ New Zealand Journal of Statistics}
+}
+
+@article{Posada2021,
+  url = {https://doi.org/10.1007/s00239-020-09982-w},
+  year = {2021},
+  volume = {89},
+  number = {3},
+  pages = {134--145},
+  author = {David Posada and Keith A. Crandall},
+  title = {Felsenstein Phylogenetic Likelihood},
+  journal = {Journal of Molecular Evolution}
+}
+
+@incollection{Patterson1982,
+    author = {Patterson, C.},
+    title = {Morphological characters and homology},
+    editor = {oysey, K.A. and Friday, A.E.},
+    booktitle = {Problems of Phylogenetic Reconstruction},
+    publisher = {Academic Press},
+    address = {New York, NY},
+    year = 1982,
+    pages = {21--74},
+    chapter = 1
+}
+
+@article{Pinna1991,
+  url = {https://doi.org/10.1111/j.1096-0031.1991.tb00045.x},
+  year = {1991},
+  volume = {7},
+  number = {4},
+  pages = {367--394},
+  author = {Mario C. C. Pinna},
+  title = {{CONCEPTS} {AND} {TESTS} {OF} {HOMOLOGY} {IN} {THE} {CLADISTIC} {PARADIGM}},
+  journal = {Cladistics}
+}
