--- a/myBib.bib
+++ b/myBib.bib
@@ -475,7 +475,7 @@
 @incollection{Patterson1982,
     author = {Patterson, C.},
     title = {Morphological characters and homology},
-    editor = {oysey, K.A. and Friday, A.E.},
+    editor = {Joysey, K.A. and Friday, A.E.},
     booktitle = {Problems of Phylogenetic Reconstruction},
     publisher = {Academic Press},
     address = {New York, NY},
@@ -491,6 +491,17 @@
   number = {4},
   pages = {367--394},
   author = {Mario C. C. Pinna},
-  title = {{CONCEPTS} {AND} {TESTS} {OF} {HOMOLOGY} {IN} {THE} {CLADISTIC} {PARADIGM}},
+  title = {Concepts and tests of homology in the cladistic paradigm},
+  journal = {Cladistics}
+}
+
+@article{Brower2012,
+  url = {https://doi.org/10.1111/j.1096-0031.2012.00398.x},
+  year = {2012},
+  volume = {28},
+  number = {5},
+  pages = {529--538},
+  author = {Andrew V.Z. Brower and Mario C.C. de Pinna},
+  title = {Homology and errors},
   journal = {Cladistics}
 }
