--- a/myBib.bib
+++ b/myBib.bib
@@ -505,3 +505,19 @@
   title = {Homology and errors},
   journal = {Cladistics}
 }
+
+@misc{wikiFrege,
+    author = "{Wikipedia contributors}",
+    title = "Gottlob Frege --- {Wikipedia}{,}The Free Encyclopedia",
+    year = "2022",
+    url = "https://pt.wikipedia.org/wiki/Gottlob_Frege",
+    note = "[Online; accessed 23-September-2022]"
+}
+
+@misc{wikiRussell,
+    author = "{Wikipedia contributors}",
+    title = "Bertrand Russell --- {Wikipedia}{,}The Free Encyclopedia",
+    year = "2022",
+    url = "https://pt.wikipedia.org/wiki/Bertrand_Russell",
+    note = "[Online; accessed 23-September-2022]"
+}
